--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,7 @@
 .styled-navbar {
     background-color: orangered;
     padding: 0 100px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 .styled-navbar-list {
@@ -17,10 +18,9 @@
     color: white;
     cursor: pointer;
     transition: all 300ms;
-
-
 }
 
-.styled-navbar-list-item:hover, .styled-navbar-list-item:active {
+.styled-navbar-list-item:hover,
+.styled-navbar-list-item:active {
     background-color: #cf3800;
 }
