--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -3,16 +3,27 @@
   flex-direction: column;
   padding: 12px;
 }
+
+.styled-input-max-width {
+  width: 100%;
+}
+
 .styled-input-label {
   padding: inherit;
   font-size: 14px;
   color: #000000;
 }
+
 .styled-input-form {
   border: solid black 0.1rem;
   border-radius: 0.2rem;
-  font-size: 1.2rem;
-  color: #b9b9b9;
+  font-size: 16px;
+  color: #141414;
   height: 30px;
   width: 190px;
+  padding-left: 10px;
+}
+
+.styled-input-form::placeholder {
+  color: #c2c2c2;
 }
