--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -2,9 +2,10 @@
   display: inline-flex;
   flex-direction: column;
   padding: 12px;
+  width: 190px;
 }
 
-.styled-input-form.maxWidth {
+.styled-input.maxWidth {
   width: 100%;
 }
 
@@ -20,8 +21,8 @@
   font-size: 16px;
   color: #141414;
   height: 30px;
-  width: 190px;
   padding-left: 10px;
+  width: 100%;
 }
 
 .styled-input-form::placeholder {
