--- a/src/components/textArea/textArea.css
+++ b/src/components/textArea/textArea.css
@@ -10,9 +10,9 @@
 }
 
 .styled-textArea-label {
-  padding: inherit;
   font-size: 14px;
   color: #000000;
+  font-weight: bold;
 }
 
 .styled-textArea-form {
@@ -21,7 +21,7 @@
   font-size: 16px;
   color: #141414;
   height: 30px;
-  padding-left: 10px;
+  padding-bottom: 10px;
   width: 100%;
   resize: none;
 }
