--- a/src/components/tabs/index.css
+++ b/src/components/tabs/index.css
@@ -1,11 +1,8 @@
 .styled-nav {
-    width: 80%;
+    width: 200px;
     margin: 0 auto;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    background-color: white;
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
     padding: 8px 12px;
   }
   
