--- a/src/components/card-details/card-details.css
+++ b/src/components/card-details/card-details.css
@@ -7,16 +7,16 @@
   border: solid rgb(174, 214, 173) 1px;
   border-radius: 5px;
   margin: 10px;
-  height: 20px;
+  height: 30px;
   width: 190px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
-  transition: all 300ms;
 }
 
 .styled-card-detail-form {
   color: black;
   font-size: 14px;
   opacity: 0.9;
+  animation: 4s rise;
 }
 
 .styled-card-detail-dropdown {
@@ -25,6 +25,28 @@
 
 .styled-card-detail:hover {
   justify-content: space-between;
+}
+.styled-card-detail:hover .styled-card-detail-form {
+  animation: 3s slidein ease-in-out;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 15%;
+  }
+
+  to {
+    margin-left: 0%;
+  }
+}
+
+@keyframes rise {
+  from {
+    transform: translateX(-5vh);
+  }
+  to {
+    transform: translateX(0);
+  }
 }
 
 .styled-card-detail:hover .styled-card-detail-dropdown {
