fix: card details page done

--- a/src/components/card-details/card-details.css
+++ b/src/components/card-details/card-details.css
@@ -15,7 +15,7 @@
 }
 
 .styled-card-detail-form {
-  color: black;
+  color: #141414;
   font-size: 14px;
   opacity: 0.9;
   word-break: break-all;
