fix: 3 card-list data getted

--- a/src/pages/trello/trello.css
+++ b/src/pages/trello/trello.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: space-between;
 }
-.styled-trello-card-done.label {
-  color: yellowgreen;
-  background-color: aquamarine;
+.styled-trello-card-list {
+  justify-content: space-between;
 }
