--- a/src/pages/trello/trello.css
+++ b/src/pages/trello/trello.css
@@ -1,7 +1,5 @@
 .styled-trello {
   display: flex;
   justify-content: space-between;
-}
-.styled-trello-card-list {
-  justify-content: space-between;
+  margin-top: 100px;
 }
