--- a/src/index.css
+++ b/src/index.css
@@ -3,14 +3,12 @@ body {
   font-family: 'Roboto', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(
-    -20deg,
-    #fdf542,
-    #fbd808,
-    #ff9005,
-    #f9530b,
-    #ff0000
-  );
+  background: linear-gradient(-20deg,
+      #fdf542,
+      #fbd808,
+      #ff9005,
+      #f9530b,
+      #ff0000);
   height: 100vh;
   width: 100vw;
 }
@@ -20,10 +18,15 @@ code {
     monospace;
 }
 
+* {
+  box-sizing: border-box;
+}
+
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 button,
