--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,7 +1,7 @@
 .styled-input {
   display: inline-flex;
   flex-direction: column;
-  padding: 12px;
+  padding: 10px;
   width: 190px;
 }
 
@@ -16,7 +16,7 @@
 }
 
 .styled-input-form {
-  border: solid black 0.1rem;
+  border: solid  #9f9090 0.1rem;
   border-radius: 0.2rem;
   font-size: 16px;
   color: #141414;
