--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,10 +1,12 @@
 .styled-button {
   outline: none;
-  padding: 15px;
+  padding: 10px;
   border-radius: 5px;
   font-weight: 600;
   border: none;
   cursor:pointer;
+  height: 30px;
+  line-height: 15px;
 }
 
 .styled-button.colour-white {
