--- a/src/components/dropdown/dropdown.css
+++ b/src/components/dropdown/dropdown.css
@@ -4,11 +4,12 @@
 }
 
 .styled-dropdown-dot {
-  height: 5px;
-  width: 5px;
-  background-color: #bbb;
+  height: 4px;
+  width: 4px;
+  background-color: #000000;
   border-radius: 50%;
   display: inline-block;
+  margin-right:-1.5px;
 }
 
 .styled-dropdown-button {
