--- a/src/components/tabs/index.css
+++ b/src/components/tabs/index.css
@@ -3,6 +3,7 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   padding: 8px 12px;
+  
 }
 
 .styled-tabs-button {
@@ -10,9 +11,13 @@
   color: #333333;
   background: none;
   border: none;
+  cursor: pointer;
+
 }
 
 .styled-tabs-button.active {
   color: blue;
   border-bottom: 2px solid blue;
 }
+
+
