--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,6 +1,6 @@
 .styled-button {
   outline: none;
-  padding: 10px;
+  padding-inline: 10px;
   border-radius: 5px;
   font-weight: 600;
   border: none;
