--- a/src/components/card-detail-list/card-detail-list.css
+++ b/src/components/card-detail-list/card-detail-list.css
@@ -13,12 +13,13 @@
 .styled-card-detail-list-button {
   position: absolute;
   display: none;
+  width: 90px;
 }
 
 .styled-card-detail-list:hover .styled-card-detail-list-button {
   display: block;
   left: 200px;
-  top: 10px;
+  top: 8px;
 }
 
 .styled-card-detail-list-label {
@@ -28,7 +29,8 @@
   font-weight: 700;
   color: green;
   font-size: 1.5rem;
-  margin-top: 60px;
+  margin-top: 30px;
+  margin-bottom: 25px;
 }
 
 .styled-card-detail-list-input {
@@ -42,5 +44,4 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  margin-top: 10px;
 }
