--- a/src/components/card-detail-list/card-detail-list.css
+++ b/src/components/card-detail-list/card-detail-list.css
@@ -6,7 +6,6 @@
   background-color: whitesmoke;
   border: 1px;
   border-radius: 5px;
-  padding: 10px;
   position: relative;
 }
 
@@ -44,4 +43,7 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  padding: 20px 30px;
+  padding-top: 0px;
+  gap: 10px;
 }
