--- a/src/components/note/note.css
+++ b/src/components/note/note.css
@@ -1,68 +1,82 @@
+
 /* note.css */
 
 .styled-note-container {
-    border: 3px solid #ccc;
-    border-radius: 5%;
-    position: relative;
-    padding: 10px;
-    margin: 10px 20px;
-    height: 368px;
-    width: 275px;
-    background-color: white;
-    display: inline-block;
-  }
-  
-  .styled-note-content {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    position: relative;
-  }
+  border: 1px solid #ccc;
+  border-radius: 2%;
+  position: relative;
+  padding: 0;
+  margin: 10px;
+  height: 302px;
+  width: 300px;
+  background-color: white;
+  display: inline-block;
+}
 
-  .styled-note-title {
-    font-size: 1.2rem;
-    margin-bottom: 5px;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-  }
-  
-  .styled-note-description {
-    margin-bottom: 10px;
-    word-wrap: break-word;
-    overflow-wrap: break-word;
-  }
-  
-  .styled-note-date {
-    font-size: 0.9rem;
-    color: #777;
-    position: absolute;
-    bottom: 2%;
-    left: 10px;
-  }
+/*
+.styled-note-content {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  position: relative;
+  width: 300px;
+  height: 380px;
+} */
 
-  .styled-note-dropdown{
-    font-size: 0.9rem;
-    color: #777;
-    position: absolute;
-    bottom: 4%;
-    right: 10px;
-  }
-  
-  .hr {
-    border: none;
-    border-top: 1px solid #ccc;
-    position: relative;
-    margin: 10px 0;
-    top: 55%;
-    left: 0;
-    right: 0;
-  }
-  
-  .styled-close-button {
-    font-size: 0.9rem;
-    border: none;
-    color: #777;
-    position: absolute;
-    top: 4%;
-    right: 15px;
-  }
+.styled-note-title {
+  margin: 0;
+  padding: 0;
+  font-size: 1.5rem;
+  margin-left: 20px;
+  margin-bottom: 5px;
+  margin-top: 10px ;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
+.styled-note-description {
+  margin: 0;
+  margin-top: 0;
+  margin-left: 20px;
+  left: 20px;
+  word-wrap: break-word;
+  overflow-wrap: break-word;
+}
+
+.styled-note-date {
+  font-size: 0.9rem;
+  color: #777;
+  position: absolute;
+  bottom: 2%;
+  left: 20px;
+}
+
+.styled-note-dropdown {
+  font-size: 0.9rem;
+  color: #777;
+  position: absolute;
+  bottom: 4%;
+  right: 25px;
+}
+
+/*
+.hr {
+  width: 85%;
+  border: none;
+  border-top: 1px solid #ccc;
+  position: relative;
+  margin: 10px 0;
+  top: 55%;
+  left: 20px;
+
+}
+*/
+
+.styled-close-button {
+  font-size: 0.9rem;
+  border: none;
+  color: #777;
+  position: absolute;
+  top: 5%;
+  right: 13px;
+}
