--- a/src/components/addNote/addnote.css
+++ b/src/components/addNote/addnote.css
@@ -12,12 +12,15 @@
     display: flex;
     flex-direction: column;
     font-weight: bold;
-    align-items: center;
+    padding-left: 20px;
     background-color: #3498db;
     width: 300px;
-    height: 380px;
+    height: 302px;
+    padding-top: 0px;
     border-radius: 10px;
 }
+
+
 
 .addNew{
     padding: 0;
@@ -28,7 +31,7 @@
     border-radius: 10px;
     cursor: pointer;
     width: 300px;
-    height: 380px;
+    height: 302px;
     outline: none;
     display: flex;
     align-items: center;
@@ -51,11 +54,12 @@
 
 .styled-addNote-buttons{
     position: relative;
-    bottom: 0;
-    left: 5%;
-    margin-top: 5px;
+    margin: 62px;
+    padding: 0;
+    left: 30px;
+    margin-top: 0;
     display: flex;
-    gap: 10px;
+    gap: 5px;
     
 }
 
@@ -65,7 +69,7 @@
     font-weight: 700;
     margin: auto;
     align-items: center;
-    margin-top: 90%;
+    margin-top: 60%;
     margin-left: 1%;
 }
 
