--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -6,7 +6,7 @@
 }
 
 .styled-input.maxWidth {
-  width: 100%;
+  width: 104%;
 }
 
 .styled-input-label {
@@ -17,6 +17,7 @@
 
 .styled-input-form {
   border: solid  #9f9090 0.1rem;
+  text-align: left;
   border-radius: 0.2rem;
   font-size: 16px;
   color: #141414;
