--- a/src/components/textArea/textArea.css
+++ b/src/components/textArea/textArea.css
@@ -1,13 +1,16 @@
 .styled-textArea {
   display: inline-flex;
   flex-direction: column;
-  padding: 12px;
-  width: 190px;
+  /* padding: 12px; */
+  width: 250px;
+
 }
+
 
 .styled-textArea.maxWidth {
   width: 100%;
 }
+
 
 .styled-textArea-label {
   font-size: 14px;
