--- a/src/components/card-detail-list/card-detail-list.css
+++ b/src/components/card-detail-list/card-detail-list.css
@@ -7,6 +7,7 @@
   border: 1px;
   border-radius: 5px;
   position: relative;
+  padding: 20px 30px;
 }
 
 .styled-card-detail-list-button {
@@ -36,6 +37,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10px;
 }
 
 .styled-card-detail-list-cardDetails {
@@ -43,7 +45,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding: 20px 30px;
   padding-top: 0px;
   gap: 10px;
 }
