--- a/src/pages/todo/todo.css
+++ b/src/pages/todo/todo.css
@@ -19,6 +19,10 @@
   margin-left: auto;
 }
 
+.styled-input {
+  width: 320px;
+}
+
 .styled-todo-tabs-end {
   border-bottom: 1px solid #9f9090;
   width: 390px;
