--- a/src/components/note/note.css
+++ b/src/components/note/note.css
@@ -1,11 +1,12 @@
 
 /* note.css */
 
-.styled-note-container {
+.styled-note{
   border: 1px solid #ccc;
   border-radius: 2%;
   position: relative;
-  margin: 10px;
+  margin: 5px;
+  margin-top: 10px;
   height: 302px;
   width: 300px;
   background-color: white;
@@ -18,6 +19,7 @@
   flex-direction: column;
   height: 100%;
   position: relative;
+  padding-top: 10px;
 } 
 
 .styled-note-title {
