--- a/src/components/addNote/addnote.css
+++ b/src/components/addNote/addnote.css
@@ -1,45 +1,26 @@
-.styled-addNote{
-    /* background-color: white; */
-    border-radius: 10px;
-    width: 10%;
-    margin-left: 9px;
-    padding-top: 10px;
-}
-
-.styled-addNote-inputs{
+.styled-addNote {
     display: flex;
     flex-direction: column;
     font-weight: bold;
-    padding-left: 20px ;
-    padding-right: 20px;
-    padding-top: 20px;
     background-color: #3498db;
     width: 300px;
     height: 302px;
     border-radius: 10px;
-    
 }
 
-
-.addNew{
-    padding: 0;
-    font-size: 16px;
-    border: none;
-    background-color: #3498db;
-    color: #ffffff;
-    border-radius: 10px;
-    cursor: pointer;
-    width: 300px;
-    height: 302px;
-    outline: none;
+.styled-addNote-inputs {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    font-weight: 600;
-    
+    flex-direction: column;
+    justify-content: space-between;
+    font-weight: bold;
+    padding: 20px;
+    background-color: #3498db;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 
-.styled-addNotes{
+.styled-addNotes {
     background-color: blue;
     height: 302px;
     width: 300px;
@@ -52,65 +33,60 @@
 
 .styled-addNote-buttons {
     display: flex;
-    margin: 10px;
-    margin-left: 90px;
-    margin-right: 10px;
+    justify-content: flex-end;
     gap: 10px;
-    
 }
 
+.styled-addNote-buttons .styled-button {
+    margin-left: initial;
+}
 
-.styled-addNotes-label{
+.styled-addNote-addNew {
+    padding: 0;
+    font-size: 16px;
+    border: none;
+    background-color: transparent;
+    color: #ffffff;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    outline: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-weight: 600;
+}
+
+.styled-addNote-addNew-label {
     font-size: 14px;
     color: white;
     font-weight: 700;
-    margin: auto;
-    align-items: center;
-    margin-top: 60%;
-    margin-left: 1%;
 }
 
-.styled-addNotes-icon {
+.styled-addNote-addNew-icon {
     height: 100px;
     width: 100px;
-    bottom: 40px;
-    left: 34%;
     border: 2px dashed white;
     border-radius: 50%;
-    margin-bottom: 10px;
-    position: relative; /* prepare for 'absolute'*/
-    
+    margin-bottom: 15px;
+    position: relative;
+    /* prepare for 'absolute'*/
 }
 
-.styled-addNotes-icon::before, .styled-addNotes-icon::after {
+.styled-addNote-addNew-icon::before,
+.styled-addNote-addNew-icon::after {
     content: "";
     display: block;
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate (-50%, -50%); 
+    transform: translate(-50%, -50%);
     width: 30px;
     background-color: white;
     height: 2px;
-   
 }
 
-.styled-addNotes-icon::after{
-    height: 30px;
-    width: 2px;
-    position: absolute;
-    top: 35%;
-    left: 49%;
-    
+.styled-addNote-addNew-icon::after {
+    transform: translate(-50%, -50%) rotate(90deg);
 }
-
-.styled-addNotes-icon::before{
-    height: 2px;
-    width: 30px;
-    position: absolute;
-    top: 50%;
-    left: 35%;
-
-}
-
-
