--- a/src/components/addNote/addnote.css
+++ b/src/components/addNote/addnote.css
@@ -6,6 +6,7 @@
     width: 320px;
     height: 320px;
     border-radius: 10px;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.1);
 }
 
 .styled-addNote-inputs {
