--- a/src/components/textArea/textArea.css
+++ b/src/components/textArea/textArea.css
@@ -16,7 +16,7 @@
 }
 
 .styled-textArea-form {
-  border: solid #9f9090 0.1rem;
+  border: solid #e9e9e9 0.1rem;
   border-radius: 0.2rem;
   font-size: 16px;
   color: #141414;
