--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -12,7 +12,7 @@
 }
 
 .styled-input-form {
-  border: solid #e9e9e9 0.1rem;
+  border: solid #9f9090 0.1rem;
   border-radius: 0.2rem;
   font-size: 16px;
   color: #141414;
@@ -27,6 +27,7 @@
 
 .styled-input-form.backgroundColor-gray {
   background-color: rgb(233, 233, 233);
+  border-color: #e9e9e9;
 }
 
 .styled-input-form::placeholder {
