--- a/src/components/textArea/textArea.css
+++ b/src/components/textArea/textArea.css
@@ -16,7 +16,7 @@
 }
 
 .styled-textArea-form {
-  border: solid #e9e9e9 0.1rem;
+  border: solid #9f9090 0.1rem;
   border-radius: 0.2rem;
   font-size: 16px;
   color: #141414;
@@ -32,4 +32,5 @@
 
 .styled-textArea-form.backgroundColor-gray {
   background-color: rgb(233, 233, 233);
+  border-color: #e9e9e9;
 }
