fixed .styled-button class components/button-props

--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -29,7 +29,7 @@
   background-color: #527cf8;
 }
 
-.styled-button.styled-button.backgroundColour-gray {
+.styled-button.backgroundColour-gray {
   background-color: rgb(233,233,233);
 }
 
