--- a/src/components/select-button/index.css
+++ b/src/components/select-button/index.css
@@ -1,26 +1,8 @@
-.styled-select-button, .styled-select-button.active {
-    outline: none;
-    padding-inline: 10px;
-    border-radius: 5px;
-    font-weight: 600;
-    border: none;
-    cursor: pointer;
-    height: 30px;
-    line-height: 15px;
+.styled-select-button Button {
     margin-right: 5px;
   }
   
-  .styled-select-button {
-    background-color: #dcdcdc;
-    color: black;
-  }
-  
-  .styled-select-button.active {
-    background-color: #527cf8;
-    color: white;
-  }
-  
-  .styled-select-button-container label {
+  .styled-select-button label {
     font-size: 14px;
     font-weight: bold;
   }
