--- a/src/modal/modal.css
+++ b/src/modal/modal.css
@@ -7,6 +7,7 @@
     background-color: rgba(0, 0, 0, 0.4);
     align-items: center;
     justify-content: center;
+    z-index: 1000000;
 }
 
 .styled-modal.open {
