--- a/src/pages/trello/trello.css
+++ b/src/pages/trello/trello.css
@@ -1,3 +1,9 @@
+.styled-trello-openModal-button {
+  display: flex;
+  justify-content: flex-end;
+  gap: 20px;
+  margin-top: 30px;
+}
 .styled-trello {
   display: flex;
   justify-content: space-between;
