--- a/src/components/card-detail-list/card-detail-list.css
+++ b/src/components/card-detail-list/card-detail-list.css
@@ -10,17 +10,40 @@
   padding: 20px 30px;
   justify-content: space-between;
 }
-
-.styled-card-detail-list-button {
-  position: absolute;
+.styled-card-detail-list-delete {
   display: none;
-  width: 90px;
 }
 
-.styled-card-detail-list:hover .styled-card-detail-list-button {
-  display: block;
-  left: 200px;
+.styled-card-detail-list:hover .styled-card-detail-list-delete {
+  display: flex;
+  position: absolute;
   top: 8px;
+  right: 10px;
+  height: 20px;
+  width: 20px;
+  cursor: pointer;
+  opacity: 0.7;
+  transition: all 300ms;
+}
+.styled-card-detail-list-delete:hover {
+  opacity: 1;
+}
+
+.styled-card-detail-list-delete::before,
+.styled-card-detail-list-delete::after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) rotate(45deg);
+  height: 2px;
+  width: 100%;
+  border-radius: 2px;
+  background-color: grey;
+}
+
+.styled-card-detail-list-delete::after {
+  transform: translate(-50%, -50%) rotate(-45deg);
 }
 
 .styled-card-detail-list-label {
